Closed Bug 1704578 Opened 3 years ago Closed 3 years ago

Validation errors in `telemetry.main` and `telemetry.event` for `#/environment/system/cpu/cores`

Categories

(Data Platform and Tools :: General, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ascholtz, Assigned: emmamalysz)

Details

(Whiteboard: [dataquality])

Attachments

(1 file)

The number of validation errors in telemetry.main and telemetry.event for #/environment/system/cpu/cores increased by x4 in the past week. It appears that for Firefox version 89.0a1 the cpu.cores value is a very large (>>2048) or a negative number. It looks like some integer overflow issue to me.

This looks like a regression to https://bugzilla.mozilla.org/show_bug.cgi?id=1625553

Digging a bit deeper, all of these invalid values are being sent from Linux clients. It also looks like this error has been appearing in earlier versions but the number of validation errors for earlier version was lower compared to the 220k/day we are seeing now.

@emalysz Any idea what might be causing this?

Flags: needinfo?(emalysz)
Assignee: nobody → emalysz
Status: NEW → ASSIGNED
Assignee: nobody → emalysz
Status: NEW → ASSIGNED
Flags: needinfo?(emalysz)
Pushed by emalysz@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3fe702d86431
cast process info elements as int32_t on linux to avoid integer overflow errors r=mconley
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Component: Datasets: General → General
Whiteboard: [data-quality] → [dataquality]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: