Bug 1704578, cast process info elements as int32_t on linux to avoid integer overflow errors r=mconley

Differential Revision: https://phabricator.services.mozilla.com/D111735